refactor: replace `init(config)` api with `new MasterCSS(config)`

--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -21,7 +21,8 @@ Let's get a sneak peek at some of the new features with the beta notes!
   - [✨ Shorthand for `-webkit-text-fill-color` `(t|text):color`](#-shorthand-for--webkit-text-fill-color-ttextcolor)
 - [New configuration and management](#new-configuration-and-management)
   - [⚙️ Extend and merge configuration](#️-extend-and-merge-configuration)
-  - [⚙️ `init()` Manually initialize Master CSS](#️-init-manually-initialize-master-css)
+  - [⚙️ Manual Initial Master CSS](#️-manual-initial-master-css)
+  - [⚙️ Automatic Initial Master CSS](#️-automatic-initial-master-css)
   - [✨ `config.themes` greatly simplifies markup with custom themes](#-configthemes-greatly-simplifies-markup-with-custom-themes)
   - [✨ `config.selectors` custom selector tokens](#-configselectors-custom-selector-tokens)
 - [Built-in theme switching and synchronization](#built-in-theme-switching-and-synchronization)
@@ -297,9 +298,9 @@ module.exports = {
 Import custom configuration in centrally managed `master.js` and initialize:
 ```js
 import config from './master.css'
-import { init } from '@master/css'
+import MasterCSS from '@master/css'
 
-export const css = init(config)
+export const css = new MasterCSS(config)
 ```
 Extended configuration `css.config` results:
 ```diff
@@ -320,36 +321,37 @@ Extended configuration `css.config` results:
 }
 ```
 
-## ⚙️ `init()` Manually initialize Master CSS
-Initialize Master CSS with custom configuration:
-```js
-// Create a `./master.{js,ts}` file to manage initialization.
+## ⚙️ Manual Initial Master CSS
+We removed the behavior of automatic initialization of `CommonJS` and `ESM` output bundles, and instead used `new MasterCSS()` to manually initialize Master CSS with additional custom configuration:
+````js
+// create a `./master.{js,ts}` file to manage initialization.
 
-import config from './master.css' // Your config file
-import { init } from '@master/css'
+import config from './master.css' // your custom config file
+import MasterCSS from '@master/css'
 
-export const css = init(config)
-```
+export const css = new MasterCSS(config) // export instance for access
+````
 
-Don't forget to include `./master.js` at the entry point of the app, e.g. `./main.js`
-```js
+Don't forget to include `./master.js` at the entry point of the application, e.g. `./main.js`
+````js
 import './master';
-```
+````
 
-If you want to configure Master CSS in `<head>`, set the global `window.masterCSSConfig` before importing:
-```diff
+## ⚙️ Automatic Initial Master CSS
+In the `IIFE` browser bundle we retain the v1 auto-initialization behavior and provide a new API `window.masterCSSConfig` to allow you to customize the configuration directly in HTML:
+````diff
 ...
 <head>
-+   <script>
-+       window.masterCSSConfig = {
-+           colors: { primary: '#ff0000' }
-+       }
-+   </script>
-    <script src="https://cdn.master.co/css@2.0.0-beta.12"></script>
++ <script>
++ window.masterCSSConfig = {
++ colors: { primary: '#ff0000' }
++ }
++ </script>
+     <script src="https://cdn.master.co/css@2.0.0-beta.12"></script>
 </head>
 ...
-```
-⚠️ Usually you just want to do this for a quick demonstration in HTML.
+````
+⚠️ This is usually only for quick demonstrations in HTML.
 
 ## ✨ `config.themes` greatly simplifies markup with custom themes
 Customize `classes`, `colors` according to different themes and combine and keep default values:
@@ -608,7 +610,7 @@ Rendering-related APIs are mainly used for Server-side Rendering and Static-site
 Pass in an array of class names and return the resulting CSS text.
 ```jsx
 import { render } from '@master/css'
-import { css } from './init'
+import { css } from './master'
 const classes: string[] = ['text:center', 'font:32']
 const result = render(classes, css)
 ```
@@ -621,7 +623,7 @@ rendered result:
 Pass in HTML text, scan and return to produce CSS text.
 ```jsx
 import { renderFromHTML } from '@master/css'
-import { css } from './init'
+import { css } from './master'
 const html: string = `
     <html>
         <head></head>
@@ -641,7 +643,7 @@ rendered result:
 Pass in HTML text → scan and produce CSS text → inject into HTML `<head>` → return rendered HTML text result.
 ```js
 import { renderIntoHTML } from '@master/css'
-import { css } from './init'
+import { css } from './master'
 const html: string = `
     <html>
         <head></head>
