--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -23,7 +23,8 @@ npm install @master/css@beta
   - [✨ `-webkit-text-fill-color` 的速記 `(t|text):color`](#--webkit-text-fill-color-的速記-ttextcolor)
 - [全新的配置及管理](#全新的配置及管理)
   - [⚙️ 擴展及合併配置](#️-擴展及合併配置)
-  - [⚙️ `init()` 手動初始化 Master CSS](#️-init-手動初始化-master-css)
+  - [⚙️ 手動初始 Master CSS](#️-手動初始-master-css)
+  - [⚙️ 自動初始 Master CSS](#️-自動初始-master-css)
   - [✨ `config.themes` 透過自訂主題大幅簡化標記](#-configthemes-透過自訂主題大幅簡化標記)
   - [✨ `config.selectors` 自訂選取器標記](#-configselectors-自訂選取器標記)
 - [內建主題切換與同步](#內建主題切換與同步)
@@ -302,9 +303,9 @@ module.exports = {
 在集中管理的 `master.js` 中引入自訂配置並初始：
 ```js
 import config from './master.css'
-import { init } from '@master/css'
+import MasterCSS from '@master/css'
 
-export const css = init(config)
+export const css = new MasterCSS(config)
 ```
 取得的配置 `css.config` 結果：
 ```diff
@@ -325,15 +326,15 @@ export const css = init(config)
 }
 ```
 
-## ⚙️ `init()` 手動初始化 Master CSS
-搭配自訂配置初始化 Master CSS：
+## ⚙️ 手動初始 Master CSS
+我們取消了 `CommonJS` 及 `ESM` 輸出包自動初始的行為，改用 `new MasterCSS()` 手動初始 Master CSS 並可額外搭配自訂配置：
 ```js
-// Create a `./master.{js,ts}` file to manage initialization.
+// create a `./master.{js,ts}` file to manage initialization.
 
-import config from './master.css' // Your config file
-import { init } from '@master/css'
+import config from './master.css' // your custom config file
+import MasterCSS from '@master/css'
 
-export const css = init(config)
+export const css = new MasterCSS(config) // export instance for access
 ```
 
 別忘了在應用程式的入口引入 `./master.js`，例如 `./main.js`
@@ -341,7 +342,8 @@ export const css = init(config)
 import './master';
 ```
 
-如果你想在 `<head>` 中配置 Master CSS，在引入前設置全域的 `window.masterCSSConfig`：
+## ⚙️ 自動初始 Master CSS
+在 `IIFE` 瀏覽器包我們保留了 v1 自動初始的行為，並提供新的 API `window.masterCSSConfig` 讓你直接在 HTML 中自訂配置：
 ```diff
 ...
 <head>
@@ -354,7 +356,7 @@ import './master';
 </head>
 ...
 ```
-⚠️ 通常你只是想在 HTML 中快速示範才會這麼做。
+⚠️ 通常只會在 HTML 中快速示範才會這麼做。
 
 ## ✨ `config.themes` 透過自訂主題大幅簡化標記
 依據不同的主題自訂 `classes`, `colors` 且合併並保留預設值：
@@ -614,7 +616,7 @@ body {
 傳入類名陣列並返回產生的 CSS 文本。
 ```jsx
 import { render } from '@master/css'
-import { css } from './init'
+import { css } from './master'
 const classes: string[] = ['text:center', 'font:32']
 const result = render(classes, css)
 ```
@@ -627,7 +629,7 @@ rendered result:
 傳入 HTML 文本、掃描並返回產生 CSS 文本。
 ```jsx
 import { renderFromHTML } from '@master/css'
-import { css } from './init'
+import { css } from './master'
 const html: string = `
     <html>
         <head></head>
@@ -647,7 +649,7 @@ rendered result:
 傳入 HTML 文本 → 掃描並產生 CSS 文本 → 注入到 HTML `<head>` 中 → 返回渲染的 HTML 文本結果。
 ```js
 import { renderIntoHTML } from '@master/css'
-import { css } from './init'
+import { css } from './master'
 const html: string = `
     <html>
         <head></head>
