--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -298,9 +298,9 @@ module.exports = {
 Import custom configuration in centrally managed `master.js` and initialize:
 ```js
 import config from './master.css'
-import MasterCSS from '@master/css'
+import MasterCSS, { root } from '@master/css'
 
-export const css = new MasterCSS(config)
+export const css = new MasterCSS({ config, root })
 ```
 Extended configuration `css.config` results:
 ```diff
@@ -327,9 +327,9 @@ We removed the behavior of automatic initialization of `CommonJS` and `ESM` outp
 // create a `./master.{js,ts}` file to manage initialization.
 
 import config from './master.css' // your custom config file
-import MasterCSS from '@master/css'
+import MasterCSS, { root } from '@master/css'
 
-export const css = new MasterCSS(config) // export instance for access
+export const css = new MasterCSS({ config, root }) // export instance for access
 ````
 
 Don't forget to include `./master.js` at the entry point of the application, e.g. `./main.js`
