test: breakpoints and config

--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -261,9 +261,9 @@ module.exports = {
         'hide-text': 'font-size:0px'
     },
     breakpoints: {
-        tablet: '768px',
-        laptop: '1024px',
-        desktop: '1280px',
+        tablet: 768,
+        laptop: 1024,
+        desktop: 1280,
     },
     selectors: {
         '>custom': '>div>:first+button'
