--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -299,8 +299,7 @@ Import custom configuration in centrally managed `master.js` and initialize:
 ```js
 import config from './master.css'
 import MasterCSS, { root } from '@master/css'
-
-export const css = new MasterCSS({ config, root })
+export const css = new MasterCSS({ config, root }).observe()
 ```
 Extended configuration `css.config` results:
 ```diff
@@ -328,8 +327,7 @@ We removed the behavior of automatic initialization of `CommonJS` and `ESM` outp
 
 import config from './master.css' // your custom config file
 import MasterCSS, { root } from '@master/css'
-
-export const css = new MasterCSS({ config, root }) // export instance for access
+export const css = new MasterCSS({ config, root }).observe() // export instance for access
 ````
 
 Don't forget to include `./master.js` at the entry point of the application, e.g. `./main.js`
