--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -304,8 +304,7 @@ module.exports = {
 ```js
 import config from './master.css'
 import MasterCSS, { root } from '@master/css'
-
-export const css = new MasterCSS({ config, root })
+export const css = new MasterCSS({ config, root }).observe()
 ```
 取得的配置 `css.config` 結果：
 ```diff
@@ -325,16 +324,17 @@ export const css = new MasterCSS({ config, root })
     ...
 }
 ```
+<img width="1009" alt="Screen Shot 2022-10-27 at 10 50 33 PM" src="https://user-images.githubusercontent.com/33840671/198322915-e8aac3c5-3676-4b39-9cf9-922927356057.png">
 
 ## ⚙️ 手動初始 Master CSS
+
 我們取消了 `CommonJS` 及 `ESM` 輸出包自動初始的行為，改用 `new MasterCSS()` 手動初始 Master CSS 並可額外搭配自訂配置：
 ```js
 // create a `./master.{js,ts}` file to manage initialization.
 
 import config from './master.css' // your custom config file
 import MasterCSS, { root } from '@master/css'
-
-export const css = new MasterCSS({ config, root }) // export instance for access
+export const css = new MasterCSS({ config, root }).observe() // export instance for access
 ```
 
 別忘了在應用程式的入口引入 `./master.js`，例如 `./main.js`
