fix: if `options.root` exists, auto `observe()` it

--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -304,7 +304,7 @@ module.exports = {
 ```js
 import config from './master.css'
 import MasterCSS, { root } from '@master/css'
-export const css = new MasterCSS({ config, root }).observe()
+export const css = new MasterCSS({ config, root })
 ```
 取得的配置 `css.config` 結果：
 ```diff
@@ -334,7 +334,7 @@ export const css = new MasterCSS({ config, root }).observe()
 
 import config from './master.css' // your custom config file
 import MasterCSS, { root } from '@master/css'
-export const css = new MasterCSS({ config, root }).observe() // export instance for access
+export const css = new MasterCSS({ config, root }) // export instance for access
 ```
 
 別忘了在應用程式的入口引入 `./master.js`，例如 `./main.js`
