--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -298,8 +298,8 @@ module.exports = {
 Import custom configuration in centrally managed `master.js` and initialize:
 ```js
 import config from './master.css'
-import MasterCSS, { root } from '@master/css'
-export const css = new MasterCSS({ config, root })
+import MasterCSS from '@master/css'
+export const css = new MasterCSS({ config })
 ```
 Extended configuration `css.config` results:
 ```diff
@@ -326,8 +326,8 @@ We removed the behavior of automatic initialization of `CommonJS` and `ESM` outp
 // create a `./master.{js,ts}` file to manage initialization.
 
 import config from './master.css' // your custom config file
-import MasterCSS, { root } from '@master/css'
-export const css = new MasterCSS({ config, root }) // export instance for access
+import MasterCSS from '@master/css'
+export const css = new MasterCSS({ config }) // export instance for access
 ````
 
 Don't forget to include `./master.js` at the entry point of the application, e.g. `./main.js`
