--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -303,8 +303,8 @@ module.exports = {
 在集中管理的 `master.js` 中引入自訂配置並初始：
 ```js
 import config from './master.css'
-import MasterCSS, { root } from '@master/css'
-export const css = new MasterCSS({ config, root })
+import MasterCSS from '@master/css'
+export const css = new MasterCSS({ config })
 ```
 取得的配置 `css.config` 結果：
 ```diff
@@ -333,8 +333,8 @@ export const css = new MasterCSS({ config, root })
 // create a `./master.{js,ts}` file to manage initialization.
 
 import config from './master.css' // your custom config file
-import MasterCSS, { root } from '@master/css'
-export const css = new MasterCSS({ config, root }) // export instance for access
+import MasterCSS from '@master/css'
+export const css = new MasterCSS({ config }) // export instance for access
 ```
 
 別忘了在應用程式的入口引入 `./master.js`，例如 `./main.js`
