refactor: rename `MasterCSSConfig` to `Config`

--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -689,7 +689,7 @@ module.exports = {
 In this way, you can choose not only `blue-40`, `blue-50` but also `blue-67`, `blue-72` and other values for better color rendering.
 
 ## `defaultConfig`
-We export all the default configuration [MasterCSSConfig](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts), you can access it by:
+We export all the default configuration [Config](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts), you can access it by:
 ```js
 import { defaultConfig } from '@master/css'
 
