--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -697,7 +697,7 @@ module.exports = {
 如此以來，你不只有 `blue-40`, `blue-50` 還有 `blue-67`, `blue-72` 等間值可以選用，以獲得更好的顯色。
 
 ## `defaultConfig`
-我們輸出了所有的預設配置 [MasterCSSConfig](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts) ，你可以透過以下方式存取：
+我們輸出了所有的預設配置 [Config](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts) ，你可以透過以下方式存取：
 ```js
 import { defaultConfig } from '@master/css'
 
