refactor: remove the `default` prefix from all configurations

--- a/docs/2.0.0-beta.md
+++ b/docs/2.0.0-beta.md
@@ -45,7 +45,7 @@ Let's get a sneak peek at some of the new features with the beta notes!
   - [`renderFromHTML()`](#renderfromhtml)
   - [`renderIntoHTML()`](#renderintohtml)
   - [`fillColorScale()`](#fillcolorscale)
-  - [`defaultConfig`](#defaultconfig)
+  - [`config`](#defaultconfig)
 - [What's next?](#whats-next)
 
 ---
@@ -231,19 +231,19 @@ module.exports = {
         light: {
             colors: {
                 primary: '#ebbb40',
-                accent: defaultColors.gold['70'],
-                major: defaultColors.slate['10'],
-                content: defaultColors.slate['30'],
-                fade: defaultColors.slate['55']
+                accent: colors.gold['70'],
+                major: colors.slate['10'],
+                content: colors.slate['30'],
+                fade: colors.slate['55']
             }
         },
         dark: {
             colors: {
                 primary: '#fbe09d',
                 accent: '#fbe09d',
-                major: defaultColors.gray['80'],
-                content: defaultColors.gray['60'],
-                fade: defaultColors.gray['60']
+                major: colors.gray['80'],
+                content: colors.gray['60'],
+                fade: colors.gray['60']
             },
             classes: {
                 btn: 'rounded'
@@ -366,10 +366,10 @@ module.exports = {
         light: {
             colors: {
                 primary: '#ebbb40',
-                accent: defaultColors.gold['70'],
-                major: defaultColors.slate['10'],
-                content: defaultColors.slate['30'],
-                fade: defaultColors.slate['55']
+                accent: colors.gold['70'],
+                major: colors.slate['10'],
+                content: colors.slate['30'],
+                fade: colors.slate['55']
             },
             classes: {
                 btn: 'bg:primary fg:white font:semibold'
@@ -379,9 +379,9 @@ module.exports = {
             colors: {
                 primary: '#fbe09d',
                 accent: '#fbe09d',
-                major: defaultColors.gray['80'],
-                content: defaultColors.gray['60'],
-                fade: defaultColors.gray['60']
+                major: colors.gray['80'],
+                content: colors.gray['60'],
+                fade: colors.gray['60']
             },
             classes: {
                 btn: 'bg:white fg:primary font:medium'
@@ -688,21 +688,21 @@ module.exports = {
 ```
 In this way, you can choose not only `blue-40`, `blue-50` but also `blue-67`, `blue-72` and other values for better color rendering.
 
-## `defaultConfig`
+## `config`
 We export all the default configuration [Config](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts), you can access it by:
 ```js
-import { defaultConfig } from '@master/css'
+import { config } from '@master/css'
 
-console.log(defaultConfig.colors)
-console.log(defaultConfig.breakpoints)
+console.log(config.colors)
+console.log(config.breakpoints)
 // ...
 ```
 or imported separately:
 ```js
-import { defaultColors, defaultBreakpoints } from '@master/css'
+import { colors, breakpoints } from '@master/css'
 
-console.log(defaultColors)
-console.log(defaultBreakpoints)
+console.log(colors)
+console.log(breakpoints)
 // ...
 ```
 [Check out all preset configurations](https://github.com/master-co/css/tree/beta/src/config)
