--- a/docs/2.0.0-beta.tw.md
+++ b/docs/2.0.0-beta.tw.md
@@ -47,7 +47,7 @@ npm install @master/css@beta
   - [`renderFromHTML()`](#renderfromhtml)
   - [`renderIntoHTML()`](#renderintohtml)
   - [`fillColorScale()`](#fillcolorscale)
-  - [`defaultConfig`](#defaultconfig)
+  - [`config`](#defaultconfig)
 - [再來是什麼？](#再來是什麼)
 
 ---
@@ -236,19 +236,19 @@ module.exports = {
         light: {
             colors: {
                 primary: '#ebbb40',
-                accent: defaultColors.gold['70'],
-                major: defaultColors.slate['10'],
-                content: defaultColors.slate['30'],
-                fade: defaultColors.slate['55']
+                accent: colors.gold['70'],
+                major: colors.slate['10'],
+                content: colors.slate['30'],
+                fade: colors.slate['55']
             }
         },
         dark: {
             colors: {
                 primary: '#fbe09d',
                 accent: '#fbe09d',
-                major: defaultColors.gray['80'],
-                content: defaultColors.gray['60'],
-                fade: defaultColors.gray['60']
+                major: colors.gray['80'],
+                content: colors.gray['60'],
+                fade: colors.gray['60']
             },
             classes: {
                 btn: 'rounded'
@@ -373,10 +373,10 @@ module.exports = {
         light: {
             colors: {
                 primary: '#ebbb40',
-                accent: defaultColors.gold['70'],
-                major: defaultColors.slate['10'],
-                content: defaultColors.slate['30'],
-                fade: defaultColors.slate['55']
+                accent: colors.gold['70'],
+                major: colors.slate['10'],
+                content: colors.slate['30'],
+                fade: colors.slate['55']
             },
             classes: {
                 btn: 'bg:primary fg:white font:semibold'
@@ -386,9 +386,9 @@ module.exports = {
             colors: {
                 primary: '#fbe09d',
                 accent: '#fbe09d',
-                major: defaultColors.gray['80'],
-                content: defaultColors.gray['60'],
-                fade: defaultColors.gray['60']
+                major: colors.gray['80'],
+                content: colors.gray['60'],
+                fade: colors.gray['60']
             },
             classes: {
                 btn: 'bg:white fg:primary font:medium'
@@ -696,21 +696,21 @@ module.exports = {
 ```
 如此以來，你不只有 `blue-40`, `blue-50` 還有 `blue-67`, `blue-72` 等間值可以選用，以獲得更好的顯色。
 
-## `defaultConfig`
+## `config`
 我們輸出了所有的預設配置 [Config](https://github.com/master-co/css/blob/beta/src/interfaces/config.ts) ，你可以透過以下方式存取：
 ```js
-import { defaultConfig } from '@master/css'
+import { config } from '@master/css'
 
-console.log(defaultConfig.colors)
-console.log(defaultConfig.breakpoints)
+console.log(config.colors)
+console.log(config.breakpoints)
 // ...
 ```
 或單獨引入：
 ```js
-import { defaultColors, defaultBreakpoints } from '@master/css'
+import { colors, breakpoints } from '@master/css'
 
-console.log(defaultColors)
-console.log(defaultBreakpoints)
+console.log(colors)
+console.log(breakpoints)
 // ...
 ```
 [查看所有預設配置](https://github.com/master-co/css/tree/beta/src/config)
