--- a/docs/language-service/vscode/content.mdx
+++ b/docs/language-service/vscode/content.mdx
@@ -8,22 +8,22 @@ The official Master CSS Language Service for Visual Studio Code extension.
     <Step $row>
         <StepL>
             ### <StepNum />Installation
-            Get it now in VSCode Extension.
+            Get it now in Visual Studio Marketplace.
         </StepL>
         <StepR>
             <a className="app-object app-object-interactive flex:col px:25 h:48 font:14 font:semibold r:4 lh:1 flex:row!" href="vscode:extension/masterco.master-css-language-service">
                 <VSCodeSvg className="ml:-4 mr:10" width="20" height="20" />
-                <span>Install to Visual Studio Code now</span>
+                <span>Install to Visual Studio Code</span>
             </a>
         </StepR>
     </Step>
     <Step $row>
         <StepL>
             ### <StepNum />Set up your workspace
-            Create a `.vscode/settings.json` in your project root, or set it in [user settings](https://code.visualstudio.com/docs/getstarted/settings).
+            Create a `.vscode/settings.json` or set it in [user settings](https://code.visualstudio.com/docs/getstarted/settings).
         </StepL>
         <StepR>
-            ```js name=.vscode/settings.json
+            ```json name=.vscode/settings.json
             { 
                 "editor.quickSuggestions": {
                     "strings": true
