--- a/docs/installation/angular/runtime-rendering/content.mdx
+++ b/docs/installation/angular/runtime-rendering/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://angular.rr.beta.css.master.co",
     src: "/images/angular-dev.png",
     alt: 'Angular and Master CSS',
