--- a/docs/installation/astro/content.mdx
+++ b/docs/installation/astro/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://astro.rr.beta.css.master.co",
     src: "/images/astro-dev.png",
     alt: 'Astro and Master CSS',
