--- a/docs/installation/blazor/content.mdx
+++ b/docs/installation/blazor/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://blazor.rr.beta.css.master.co",
     src: "/images/blazor-dev.png",
     alt: 'Blazor and Master CSS',
