--- a/docs/installation/laravel/content.mdx
+++ b/docs/installation/laravel/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     src: "/images/laravel-dev.png",
     alt: 'Laravel and Master CSS',
     width: 665, height: 400, hasDark: true }} />
