--- a/docs/installation/nextjs/runtime-rendering/content.mdx
+++ b/docs/installation/nextjs/runtime-rendering/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://nextjs.rr.beta.css.master.co",
     src: "/images/nextjs-dev.png",
     alt: 'Next.js and Master CSS',
