--- a/docs/installation/nuxtjs/runtime-rendering/content.mdx
+++ b/docs/installation/nuxtjs/runtime-rendering/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://nuxtjs.rr.beta.css.master.co",
     src: "/images/nuxtjs-dev.png",
     alt: 'Nuxt.js and Master CSS',
