--- a/docs/installation/react/runtime-rendering/content.mdx
+++ b/docs/installation/react/runtime-rendering/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://react.rr.beta.css.master.co",
     src: "/images/react-dev.png",
     alt: 'Vite and Master CSS',
