--- a/docs/installation/svelte/content.mdx
+++ b/docs/installation/svelte/content.mdx
@@ -1,3 +1,5 @@
+import ProgressiveRenderingIntro from '../../rendering-modes/components/ProgressiveRenderingIntro.mdx'
+
 <ProgressiveRenderingIntro img={{
     href: "https://svelte.pr.beta.css.master.co",
     src: "/images/svelte-dev.png",
