--- a/docs/installation/svelte/runtime-rendering/content.mdx
+++ b/docs/installation/svelte/runtime-rendering/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://svelte.rr.beta.css.master.co",
     src: "/images/svelte-dev.png",
     alt: 'Svelte and Master CSS',
