--- a/docs/installation/vite/content.mdx
+++ b/docs/installation/vite/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://vite.rr.beta.css.master.co",
     src: "/images/vite-dev.png",
     alt: 'Vite and Master CSS',
