--- a/docs/installation/vuejs/runtime-rendering/content.mdx
+++ b/docs/installation/vuejs/runtime-rendering/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://vuejs.rr.beta.css.master.co",
     src: "/images/vuejs-dev.png",
     alt: 'Vue.js and Master CSS',
