--- a/docs/installation/webpack/content.mdx
+++ b/docs/installation/webpack/content.mdx
@@ -1,4 +1,7 @@
+import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
+
 <RuntimeRenderingIntro img={{
+
     href: "https://webpack.rr.beta.css.master.co",
     src: "/images/webpack-dev.png",
     alt: 'Webpack and Master CSS',
