--- a/docs/rendering-modes/progressive-rendering/content.mdx
+++ b/docs/rendering-modes/progressive-rendering/content.mdx
@@ -1,5 +1,6 @@
-## Overview [sr-only]
+import ProgressiveRenderingIntro from '../components/ProgressiveRenderingIntro.mdx'
 
+## Overview [sr-only]
 <ProgressiveRenderingIntro />
 
 ---
