--- a/docs/rendering-modes/runtime-rendering/content.mdx
+++ b/docs/rendering-modes/runtime-rendering/content.mdx
@@ -1,5 +1,6 @@
-## Overview [sr-only]
+import RuntimeRenderingIntro from '../components/RuntimeRenderingIntro.mdx'
 
+## Overview [sr-only]
 <RuntimeRenderingIntro />
 
 ---
