--- a/docs/rendering-modes/static-extraction/content.mdx
+++ b/docs/rendering-modes/static-extraction/content.mdx
@@ -1,5 +1,6 @@
-## Overview [sr-only]
+import StaticExtractionIntro from '../components/StaticExtractionIntro.mdx'
 
+## Overview [sr-only]
 <StaticExtractionIntro />
 
 ---
