--- a/docs/installation/angular/content.mdx
+++ b/docs/installation/angular/content.mdx
@@ -1,3 +1,5 @@
+import ProgressiveRenderingIntro from '../../rendering-modes/components/ProgressiveRenderingIntro.mdx'
+
 <ProgressiveRenderingIntro img={{
     src: "/images/angular-dev.png",
     alt: 'Angular and Master CSS',
