--- a/docs/installation/angular/static-extraction/content.mdx
+++ b/docs/installation/angular/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     href: "https://angular.se.beta.css.master.co",
     src: "/images/angular-dev.png",
