--- a/docs/installation/astro/static-extraction/content.mdx
+++ b/docs/installation/astro/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     href: "https://astro.se.beta.css.master.co",
     src: "/images/astro-dev.png",
