--- a/docs/installation/blazor/static-extraction/content.mdx
+++ b/docs/installation/blazor/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     href: "https://blazor.se.beta.css.master.co",
     src: "/images/blazor-dev.png",
