--- a/docs/installation/laravel/static-extraction/content.mdx
+++ b/docs/installation/laravel/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     src: "/images/laravel-dev.png",
     alt: 'Laravel and Master CSS',
