--- a/docs/installation/nextjs/content.mdx
+++ b/docs/installation/nextjs/content.mdx
@@ -1,3 +1,5 @@
+import ProgressiveRenderingIntro from '../../rendering-modes/components/ProgressiveRenderingIntro.mdx'
+
 <ProgressiveRenderingIntro img={{
     href: "https://nextjs.pr.beta.css.master.co",
     src: "/images/nextjs-dev.png",
