--- a/docs/installation/nextjs/static-extraction/content.mdx
+++ b/docs/installation/nextjs/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     href: "https://nextjs.se.beta.css.master.co",
     src: "/images/nextjs-dev.png",
