--- a/docs/installation/nuxtjs/content.mdx
+++ b/docs/installation/nuxtjs/content.mdx
@@ -1,3 +1,5 @@
+import ProgressiveRenderingIntro from '../../rendering-modes/components/ProgressiveRenderingIntro.mdx'
+
 <ProgressiveRenderingIntro img={{
     href: "https://nuxtjs.pr.beta.css.master.co",
     src: "/images/nuxtjs-dev.png",
