--- a/docs/installation/nuxtjs/static-extraction/content.mdx
+++ b/docs/installation/nuxtjs/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     href: "https://nuxtjs.se.beta.css.master.co",
     src: "/images/nuxtjs-dev.png",
