--- a/docs/installation/react/content.mdx
+++ b/docs/installation/react/content.mdx
@@ -1,3 +1,5 @@
+import ProgressiveRenderingIntro from '../../rendering-modes/components/ProgressiveRenderingIntro.mdx'
+
 <ProgressiveRenderingIntro img={{
     href: "https://react.pr.beta.css.master.co",
     src: "/images/react-dev.png",
