--- a/docs/installation/svelte/static-extraction/content.mdx
+++ b/docs/installation/svelte/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     href: "https://svelte.se.beta.css.master.co",
     src: "/images/svelte-dev.png",
