--- a/docs/installation/vite/static-extraction/content.mdx
+++ b/docs/installation/vite/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     href: "https://vite.se.beta.css.master.co",
     src: "/images/vite-dev.png",
