--- a/docs/installation/vuejs/static-extraction/content.mdx
+++ b/docs/installation/vuejs/static-extraction/content.mdx
@@ -1,3 +1,5 @@
+import StaticExtractionIntro from '../../../components/StaticExtractionIntro.mdx'
+
 <StaticExtractionIntro img={{
     href: "https://vuejs.se.beta.css.master.co",
     src: "/images/vuejs-dev.png",
