--- a/docs/rendering-modes/components/RuntimeRenderingIntro.mdx
+++ b/docs/rendering-modes/components/RuntimeRenderingIntro.mdx
@@ -1,16 +1,17 @@
-import { IconPackageImport, IconDevicesBolt, IconAdjustments } from '@tabler/icons-react'
+import { IconAdjustments, IconRecycle, IconWorldDownload } from '@tabler/icons-react'
 import ImageCallToPreview from 'shared/components/ImageCallToPreview'
 import Features, { Feature } from 'shared/components/Features'
+import { l } from 'to-line'
 
-Master CSS [Progressive Rendering](/docs/rendering-modes/progressive-rendering) scans the rendered HTML ahead of time, **server-side** or **at build time**, generates the corresponding **CSS rules for each page**, and **lazy loads** the runtime engine to keep track of the dynamic class names.
+Master CSS [Runtime Rendering](/docs/rendering-modes/runtime-rendering) observes **changes in DOM class names** at browser runtime, generates corresponding CSS rules, and injects them into the **running style sheet**.
 <div className="flex flex:wrap@<sm gap:50 mt:50">
-    <Features className="grid-cols:1 w:35%@sm">
+    <Features className={l('grid-cols:1', props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
         <Feature>
-            <IconDevicesBolt className="app-icon-primary" />
+            <IconWorldDownload className="app-icon-primary" />
             <div>
-                **Faster page loading**
+                **Fixed style cost**
                 
-                Non-rendering-blocking internal CSS and lazy loading
+                All features work out of the box with ~16KB transfer cost
             </div>
         </Feature>
         <Feature>
@@ -22,11 +23,11 @@ Master CSS [Progressive Rendering](/docs/rendering-modes/progressive-rendering) 
             </div>
         </Feature>
         <Feature>
-            <IconPackageImport className="app-icon-primary" />
+            <IconRecycle className="app-icon-primary" />
             <div>
-                **CSS encapsulation**
+                **CSS lifecycle**
                 
-                Only ship the page-used CSS instead of the whole site
+                CSS is generated on demand and frees memory when not in use
             </div>
         </Feature>
     </Features>
