Docs: Update Roadmap for **Master CSS ESLint**

--- a/docs/markup-driven/content.mdx
+++ b/docs/markup-driven/content.mdx
@@ -273,10 +273,10 @@ Master CSS also features autocompletion, generated CSS preview, and more. Check 
 
 ## Separation of concerns
 
-Many folks believe that HTML and CSS should conform to the design principle of separation of concerns (SoC). We believe that applying SoC to HTML & CSS, is more a matter of cultural momentum, and over-interpretation of SoC.
+Many folks believe that HTML and CSS should conform to the design principle of separation of concerns (SoC). We believe that applying SoC to HTML & CSS, is more a matter of cultural momentum and over-interpretation of SoC.
 
-JavaScript aside, web UI consists of HTML structure, and CSS for styling. CSS takes up a significant portion of time spent working on HTML and its related business logic. This implies that HTML and CSS are highly integrated and almost always used together.
+JavaScript aside, web UI consists of HTML structure and CSS for styling. CSS takes up a significant portion of time spent working on HTML and its related business logic. This implies that HTML and CSS are highly integrated and always used together.
 
-Separating the two introduces a layer of abstraction where the cost usually outweigh the benefit, leading to [premature abstraction](#premature-abstraction).
+Separating the two introduces a layer of abstraction where the cost usually outweighs the benefit, leading to [premature abstraction](#premature-abstraction).
 
 > **You should focus on the separation/componentization of business responsibilities, not language separation.**
