--- a/docs/state-selectors/content.mdx
+++ b/docs/state-selectors/content.mdx
@@ -1,7 +1,7 @@
 import furnitures from 'shared/data/furnitures'
 import animals from 'shared/data/animals'
 
-## Overview [sr-only]
+## Features [sr-only]
 ```html
 <!-- Set foreground to blue on hover -->
 <div class="fg:blue**:hover**">
@@ -13,7 +13,7 @@ import animals from 'shared/data/animals'
 <details class="bg:white**[open]**" open>
 …
 ```
-Master CSS allows you to suffix, such as [pseudo-classes](#pseudo-classes), [pseudo-elements](#pseudo-elements), [compound states](#compound-states), [media queries](#media-queries), etc., to apply styles on different conditions, and all CSS features are supported.
+Master CSS allows you to suffix, such as [pseudo-classes](#pseudo-classes), [pseudo-elements](#pseudo-elements), [compound states](#compound-states), etc., to apply styles on different conditions.
 
 ### Multiple states
 Master CSS allows the same property to have different states on the same element.
