--- a/docs/global-styles/content.mdx
+++ b/docs/global-styles/content.mdx
@@ -1,6 +1,5 @@
 ## Overview [sr-only]
-
-Set your [brand's typeface](/docs/design-tokens#custom-typeface), foreground color, etc., add syntax in `html <body class="…">` and rely on native inheritance behavior or use CSS selectors to preset global styles.
+Customize your fonts, foreground color, etc., add syntax in `html <body class="…">` and rely on native inheritance behavior or use CSS selectors to preset global styles.
 
 As an example of custom [fonts](/docs/fonts):
 ```html
