--- a/docs/code-linting/angular/content.mdx
+++ b/docs/code-linting/angular/content.mdx
@@ -1,10 +1,3 @@
-import Introduction from '../components/Introduction.mdx'
-
-<Introduction />
-
----
-
-## Quick start
 <StepSection className="mt:50">
     <Step $row>
         <StepL>
@@ -13,7 +6,7 @@ import Introduction from '../components/Introduction.mdx'
         </StepL>
         <StepR>
             ```install
-            -D @master/eslint-plugin-css @angular-eslint/template-parser eslint
+            -D @master/eslint-config-css@beta @angular-eslint/template-parser eslint
             ```
         </StepR>
     </Step>
@@ -45,9 +38,3 @@ import Introduction from '../components/Introduction.mdx'
         ```
     </Step>
 </StepSection>
-
----
-
-import Footer from '../components/Footer.mdx'
-
-<Footer />
