--- a/docs/code-linting/components/Footer.mdx
+++ b/docs/code-linting/components/Footer.mdx
@@ -7,7 +7,7 @@ Typical setup for Visual Studio Code users.
 <StepSection>
     <Step $row>
         <StepL>
-            ### <StepNum />Install extension
+            ### <StepNum />Installation
             Install the [ESLint extension](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint) in the Visual Studio Marketplace.
         </StepL>
         <StepR>
