--- a/docs/configuration/content.mdx
+++ b/docs/configuration/content.mdx
@@ -26,14 +26,6 @@ Customizing animation [animations](/docs/animations) for your design system.
 Customizing abstract [classes](/docs/classes) for your design system.
 <ClassesOverview />
 
-### `.colors`
-Customizing [colors](/docs/colors) for your design system.
-<ColorsOverview />
-
-### `.fonts`
-Customizing [fonts](/docs/colors) for your design system.
-<FontsOverview />
-
 ### `.functions`
 Customizing [functions](/docs/functions) for your design system.
 <FunctionsOverview />
@@ -64,7 +56,20 @@ Customizing responsive [viewports](/docs/viewports) for your design system.
 
 ---
 
-## Settings
+## Variable
+### `.colors`
+Customizing [colors](/docs/colors) for your design system.
+<ColorsOverview />
+
+### `.fonts`
+Customizing [fonts](/docs/colors) for your design system.
+<FontsOverview />
+
+{/* ### `.variables` 🚧 */}
+
+---
+
+## Setting
 
 ### `.extends`
 Extend custom or external configuration.
