--- a/docs/installation/(root)/content.mdx
+++ b/docs/installation/(root)/content.mdx
@@ -5,19 +5,19 @@ import migrations from 'shared/data/migrations'
 Installation guides for popular frameworks and build tools integrated with [rendering modes](/docs/rendering-modes) of Master CSS, as well as migration guides.
 
 ## Web frameworks
-<Section>
+<IconButtons url="/docs/installation">
     {frameworks}
-</Section>
+</IconButtons>
 
 ## Build tools
-<Section>
+<IconButtons url="/docs/installation">
     {buildTools}
-</Section>
+</IconButtons>
 
 ## Migrations
-<Section>
+<IconButtons url="/docs/installation">
     {migrations}
-</Section>
+</IconButtons>
 
 ---
 
