--- a/docs/rendering-modes/components/RuntimeRenderingIntro.mdx
+++ b/docs/rendering-modes/components/RuntimeRenderingIntro.mdx
@@ -5,7 +5,7 @@ import { l } from 'to-line'
 
 Master CSS [Runtime Rendering](/docs/rendering-modes/runtime-rendering) observes **changes in DOM class names** at browser runtime, generates corresponding CSS rules, and injects them into the **running style sheet**.
 <div className="flex flex:wrap@<sm gap:50 mt:50">
-    <Features className={l('grid-cols:1', props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
+    <Features className={l(props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
         <Feature>
             <IconWorldDownload className="app-icon-primary" />
             <div>
