--- a/docs/rules/content.mdx
+++ b/docs/rules/content.mdx
@@ -13,6 +13,15 @@ To customize global values, check out the [Values Configuration](/docs/values) d
 
 ---
 
-## Default
+## References
+### Default
 <Default />
 View the full [source code](https://github.com/master-co/css/blob/beta/packages/css/src/config/rules.ts)
+
+### Layer
+<LayerReference />
+View the full [source code](https://github.com/master-co/css/blob/beta/packages/css/src/layer.ts)
+
+### Core Layer
+<CoreLayerReference />
+View the full [source code](https://github.com/master-co/css/blob/beta/packages/css/src/layer.ts)
